--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon image_src" href="/src/assets/logo-round.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue To Do App</title>
+    <title>To Do App</title>
   </head>
   <body>
     <div id="app"></div>
